      - non-empty-dependency_libs-in-la-file
    + Removed:
      - uses-dh-python-with-no-pycompat

  * checks/binaries:
    + [NT] Applied patch from Paul Wise to detect binaries embeddeding
      glee, glew and libtheora.  (Closes: #629288)
  * checks/debhelper{,.desc}:
    + [NT] Recognise that dh_python and dh_pycentral are now obsolete.
      (Closes: #496902, #541978)
  * checks/copyright-file:
    + [NT] Extended current dh_make template checks.  Thanks to
      Nelson A. de Oliveira for the report and investigative work.
      (Closes: #598412)
  * checks/fields{,.desc}:
    + [NT] Allow "all" and "any" to appear together in the Architecture
      field of a .dsc file.  (Closes: #626775)
    + [NT] Added illegal-multi-arch-value.  (Closes: #616493)
  * checks/files:
    + [NT] Fixed two misnamed udeb tags, which lead to an internal
      error if triggered.  Thanks to Guillem Jover for the report.
      (Closes: #628754)
    + [NT] Added bad-perm-for-file-in-etc-sudoers.d tag.
      (Closes: #588831)
  * checks/java{,.desc}:
    + [NT] Sort the jar files by name, so they are checked in the same
      order.
    + [NT] Improved the description of classpath-contains-relative-path.
      (Closes: #629189)
    + [NT] Reduced false-positives of classpath-contains-relative-path.
      Relative classpaths are now okay if they point to jar files in
      /usr/share/java (but not subdirs thereof) and there is a strong
      libX-java dependency.  Alternatively if the classpath points to
      a file or a symlink in the package itself, then it is also okay.
    + [NT] Allow maven plugins to be without classpaths.
      (Closes: #629056)
  * checks/rules:
    + [NT] Removed code for handling packages with dh_python.
    + [NT] Fixed the code for determining Build-Depends for python
      packages.  Thanks to Jakub Wilk for the patch.
      (Closes: #614876, #616553)
    + [NT] Applied patch from Roger Leigh to implement the check for